hphp/hack/test/typecheck/references/pass_by_ref/pass_by_ref_annotation4.php.exp
File "pass_by_ref_annotation4.php", line 3, characters 16-16:
Encountered unexpected token '&'. (Parsing[1002])
File "pass_by_ref_annotation4.php", line 19, characters 6-6:
Unbound name: & (a global constant) (Naming[2049])
File "pass_by_ref_annotation4.php", line 19, characters 9-9:
Unbound name: , (a global constant) (Naming[2049])
File "pass_by_ref_annotation4.php", line 20, characters 10-10:
Unbound name: & (a global constant) (Naming[2049])
File "pass_by_ref_annotation4.php", line 21, characters 6-6:
Unbound name: & (a global constant) (Naming[2049])
File "pass_by_ref_annotation4.php", line 21, characters 9-9:
Unbound name: , (a global constant) (Naming[2049])
File "pass_by_ref_annotation4.php", line 22, characters 6-6:
Unbound name: & (a global constant) (Naming[2049])
File "pass_by_ref_annotation4.php", line 22, characters 9-9:
Unbound name: , (a global constant) (Naming[2049])
File "pass_by_ref_annotation4.php", line 22, characters 13-13:
Unbound name: , (a global constant) (Naming[2049])
File "pass_by_ref_annotation4.php", line 22, characters 17-17:
Unbound name: , (a global constant) (Naming[2049])
File "pass_by_ref_annotation4.php", line 22, characters 22-22:
Unbound name: , (a global constant) (Naming[2049])
File "pass_by_ref_annotation4.php", line 22, characters 26-26:
Unbound name: , (a global constant) (Naming[2049])
File "pass_by_ref_annotation4.php", line 22, characters 30-30:
Unbound name: , (a global constant) (Naming[2049])
File "pass_by_ref_annotation4.php", line 27, characters 6-6:
Unbound name: & (a global constant) (Naming[2049])
File "pass_by_ref_annotation4.php", line 31, characters 6-6:
Unbound name: & (a global constant) (Naming[2049])
File "pass_by_ref_annotation4.php", line 33, characters 9-11:
Unbound name: int (a global constant) (Naming[2049])
File "pass_by_ref_annotation4.php", line 33, characters 15-15:
Unbound name: , (a global constant) (Naming[2049])
File "pass_by_ref_annotation4.php", line 33, characters 17-22:
Unbound name: string (a global constant) (Naming[2049])
File "pass_by_ref_annotation4.php", line 33, characters 27-27:
Unbound name: ) (a global constant) (Naming[2049])
File "pass_by_ref_annotation4.php", line 33, characters 29-31:
Unbound name: ==> (a global constant) (Naming[2049])
File "pass_by_ref_annotation4.php", line 35, characters 10-10:
Unbound name: & (a global constant) (Naming[2049])
File "pass_by_ref_annotation4.php", line 36, characters 6-6:
Unbound name: & (a global constant) (Naming[2049])
File "pass_by_ref_annotation4.php", line 36, characters 9-9:
Unbound name: , (a global constant) (Naming[2049])
File "pass_by_ref_annotation4.php", line 37, characters 6-6:
Unbound name: & (a global constant) (Naming[2049])
File "pass_by_ref_annotation4.php", line 37, characters 9-9:
Unbound name: , (a global constant) (Naming[2049])
File "pass_by_ref_annotation4.php", line 43, characters 6-6:
Unbound name: & (a global constant) (Naming[2049])
File "pass_by_ref_annotation4.php", line 19, characters 3-6:
Too few arguments (required 2 but got 1) (Typing[4104])
File "pass_by_ref_annotation4.php", line 3, characters 10-10:
Definition is here
File "pass_by_ref_annotation4.php", line 21, characters 3-6:
Too few arguments (required 2 but got 1) (Typing[4104])
File "pass_by_ref_annotation4.php", line 3, characters 10-10:
Definition is here
File "pass_by_ref_annotation4.php", line 22, characters 3-6:
Too few arguments (required 2 but got 1) (Typing[4104])
File "pass_by_ref_annotation4.php", line 3, characters 10-10:
Definition is here
File "pass_by_ref_annotation4.php", line 33, characters 13-14:
Variable $x is undefined, or not always defined (did you mean $a instead?) (Naming[2050])
File "pass_by_ref_annotation4.php", line 33, characters 25-26:
Variable $y is undefined, or not always defined (did you mean $a instead?) (Naming[2050])
File "pass_by_ref_annotation4.php", line 33, characters 33-34:
Variable $y is undefined, or not always defined (did you mean $a instead?) (Naming[2050])
File "pass_by_ref_annotation4.php", line 33, characters 43-44:
Variable $x is undefined, or not always defined (did you mean $a instead?) (Naming[2050])
